# btdx

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Readme.md  pyproject.toml
src/DX/: DX.py  __init__.py
src/btdx/: DX.py  __init__.py
src/dataexchange/: __init__.py
